--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ p{
 .bg-blue1{
     background: rgb(148 131 200);
     width: 100%;
-    height: 89%;
+    height: 100vh;
     text-align: center;
 
 }
@@ -70,6 +70,17 @@ p{
     background: rgb(12, 12, 41);
     color: white;
     text-align: center;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 @media (max-width: 685px ) {
     .box{
