--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ input[type=number] {
     .bg-blue1{
         background: rgb(148 131 200);
         width: 100%;
-        height: 90%;
+        height: 90vh;
         text-align: center;
     
     }
@@ -122,5 +122,12 @@ input[type=number] {
 @media (max-width: 420px ){
     .box h2{
         font-size: 15px;
+    }
+      .bg-blue1{
+        background: rgb(148 131 200);
+        width: 100%;
+        height: 90vh;
+        text-align: center;
+    
     }
 }
